# py-chinese-pronounce

./: .buildinfo  .gitignore  README.md  build_docs.sh  genindex.html  index.html  objects.inv  py-modindex.html  py_chinese_pronounce.html  py_chinese_pronounce.ipynb  pyproject.toml  search.html  searchindex.js
.github/workflows/: python-app.yml
_sources/: index.rst.txt
docs/: package-lock.json
docs/source/: conf.py  index.rst  py_chinese_pronounce.rst
py_chinese_pornounce/: CNS_phonetic.txt  CNS_pinyin_1.txt  CNS_pinyin_2.txt  __init__.py
py_chinese_pronounce/: __init__.py  core.py
tests/: test_py_chinese_pornounce.py  test_py_chinese_pronounce.py
