[tool.poetry]
name = "py-chinese-pronounce"
version = "0.1.2"
description = "文字/漢語發音/注音互轉。相似發聲字/單詞。"
authors = ["Philip Huang <p208p2002@gmail.com>"]
include = ["py_chinese_pronounce/*.txt"]
homepage = "https://github.com/p208p2002/py-chinese-pronounce"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.9"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
